<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background2">


    <TextView
        android:id="@+id/textView5"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/menukomunikat2"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/ic_launcher_background"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <Button
        android:id="@+id/start"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:backgroundTint="@color/zielony"
        android:text="@string/start"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="319dp"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/menukomunikat1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textIsSelectable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.529" />

</androidx.constraintlayout.widget.ConstraintLayout>